# librsp

./: .gitignore  CMakeLists.txt
lib/: msi001.c  msi001.h  msi2500.c  msi2500.h  rsp.c  rsp.h
src/: main.cpp
